--- a/SCSS/partials/_header.scss
+++ b/SCSS/partials/_header.scss
@@ -1,8 +1,10 @@
 header {
     background-color: $negro;
     box-shadow: -1px 5px 16px -3px rgba(0, 0, 0, 0.72);
-    a {
-      margin: 16px;
+    li {
+      a {
+        margin: 16px;
+      }
     }
     .active {
       font-weight: bold;
@@ -13,16 +15,19 @@ header {
     }
     @include large {
       background-color: $blanco;
-      a {
-        color: $negro !important;
-        text-align: center;
-        &:hover {
-          background-color: #e9c7c7;
-          border-radius: 5px;
+      li {
+        a {
+          color: $negro !important;
+          text-align: center;
+          &:hover {
+            background-color: #e9c7c7;
+            border-radius: 5px;
+            transition: 0.2s;
+          }
         }
       }
       .contacto:hover {
-        background-color: rgb(204, 147, 77);
+        background-color: $melon;
       }
       img {
         filter: invert(100%);
