--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,12 +6,6 @@ body {
 .talleres {
   background-color: #692121;
 }
-@media (min-width: 1200px) {
-  .talleres {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
-}
 .talleres h2 {
   font-weight: bold;
   color: #fff;
@@ -26,14 +20,15 @@ body {
   }
 }
 .talleres h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: #692121;
   padding: 12px 0px;
   text-align: center;
   margin: 0px;
 }
-.talleres h6 {
+.talleres h4 {
+  font-size: 1rem;
   font-weight: bold;
   color: #692121;
 }
@@ -41,12 +36,6 @@ body {
   background-color: rgba(42, 40, 40, 0.2078431373);
 }
 
-@media (min-width: 1200px) {
-  .galería {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
-}
 .galería h2 {
   font-weight: bolder;
   color: #692121;
@@ -60,13 +49,6 @@ body {
   .galería hr {
     width: 10vw;
   }
-}
-.galería a {
-  color: #090909;
-  text-align: center;
-}
-.galería .active {
-  background-color: #c79665 !important;
 }
 .galería img {
   height: 329px;
@@ -85,11 +67,16 @@ body {
 }
 
 @media (min-width: 1200px) {
-  .preguntas {
-    padding-left: 250px;
-    padding-right: 250px;
+  .forma h1 {
+    font-size: 2.2rem;
+  }
+  .forma p {
+    font-size: 1.1rem;
+    padding: 0px 55px;
+    text-align: center;
   }
 }
+
 .preguntas h2 {
   font-weight: bolder;
   color: #692121;
@@ -111,8 +98,8 @@ body {
 }
 @media (min-width: 1200px) {
   .maincultural {
-    padding-left: 250px;
-    padding-right: 250px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 .maincultural .contenido h2 {
@@ -129,13 +116,13 @@ body {
     background-color: #692121;
   }
 }
-.maincultural .contenido h5 {
+.maincultural .contenido h3 {
   font-weight: bold;
   font-size: 1.5rem;
   text-align: center;
 }
 @media (min-width: 1200px) {
-  .maincultural .contenido h5 {
+  .maincultural .contenido h3 {
     margin-bottom: 24px;
   }
 }
@@ -148,6 +135,9 @@ body {
     margin-bottom: 60px;
   }
 }
+.maincultural .contenido .btn {
+  padding-left: 0px;
+}
 
 .mainhistoria {
   height: auto;
@@ -159,8 +149,8 @@ body {
 }
 @media (min-width: 1200px) {
   .mainhistoria {
-    padding-left: 250px;
-    padding-right: 200px;
+    padding-left: 30px;
+    padding-right: 20px;
   }
 }
 .mainhistoria .contenido h2 {
@@ -180,16 +170,20 @@ body {
   height: 400px;
   object-fit: cover;
 }
+@media (min-width: 1200px) {
+  .mainhistoria .contenido img {
+    width: 400px;
+  }
+}
 .mainhistoria .contenido .hbloque1__texto {
   text-align: justify;
 }
-.mainhistoria .contenido .hbloque1__texto h4 {
+.mainhistoria .contenido .hbloque1__texto h3 {
   margin-bottom: 24px;
 }
 @media (min-width: 1200px) {
-  .mainhistoria .contenido .hbloque1__texto h4 {
+  .mainhistoria .contenido .hbloque1__texto h3 {
     line-height: 1.5;
-    padding: 0px 64px;
   }
 }
 .mainhistoria .contenido .hbloque1__texto p {
@@ -198,7 +192,6 @@ body {
 }
 @media (min-width: 1200px) {
   .mainhistoria .contenido .hbloque1__texto p {
-    padding: 0px 64px;
     font-size: 1rem;
   }
 }
@@ -217,13 +210,13 @@ body {
     width: 30vw;
   }
 }
-.mainhistoria .contenido .hbloque2 h5 {
+.mainhistoria .contenido .hbloque2 h3 {
   font-weight: bold;
   font-size: 1.3rem;
   line-height: 1.8;
 }
 @media (min-width: 1200px) {
-  .mainhistoria .contenido .hbloque2 h5 {
+  .mainhistoria .contenido .hbloque2 h3 {
     font-size: 1.5rem;
   }
 }
@@ -238,13 +231,8 @@ body {
 .mainhistoria .contenido .shblock3 {
   text-align: justify;
 }
-.mainhistoria .contenido .shblock3 h4 {
+.mainhistoria .contenido .shblock3 h3 {
   margin-bottom: 24px;
-}
-@media (min-width: 1200px) {
-  .mainhistoria .contenido .shblock3 h4 {
-    margin-right: 60px;
-  }
 }
 .mainhistoria .contenido .shblock3 p {
   font-weight: lighter;
@@ -252,19 +240,12 @@ body {
 }
 @media (min-width: 1200px) {
   .mainhistoria .contenido .shblock3 p {
-    margin-right: 60px;
     font-size: 1rem;
   }
 }
 
 .maininfog {
   background-color: #2a2828;
-}
-@media (min-width: 1200px) {
-  .maininfog {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
 }
 .maininfog .contenido .titulo h2 {
   font-weight: bold;
@@ -279,13 +260,13 @@ body {
     width: 15vw;
   }
 }
-.maininfog h5 {
+.maininfog h4 {
   font-weight: bold;
   font-size: 1.1rem;
   text-align: center;
 }
 @media (min-width: 1200px) {
-  .maininfog h5 {
+  .maininfog h4 {
     font-size: 1.3rem;
     margin: 24px 0px;
   }
@@ -296,16 +277,16 @@ body {
 .maininfog span {
   background-color: rgba(0, 0, 0, 0.464);
 }
+.maininfog img {
+  height: 787px;
+  object-fit: cover;
+  object-position: center;
+  filter: brightness(0.5);
+}
 
 .mainexhib {
   background-color: #692121;
   color: #fff;
-}
-@media (min-width: 1200px) {
-  .mainexhib {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
 }
 .mainexhib .contenido .titulo h2 {
   font-weight: bold;
@@ -315,7 +296,12 @@ body {
   width: 30vw;
   border: 3px solid #fff;
 }
-.mainexhib h5 {
+@media (min-width: 1200px) {
+  .mainexhib .contenido .titulo hr {
+    width: 18vw;
+  }
+}
+.mainexhib h4 {
   font-weight: bold;
   font-size: 1.1rem;
   text-align: center;
@@ -334,27 +320,20 @@ body {
   background-color: #160c0c;
 }
 @media (min-width: 1200px) {
+  .mainexhib .card .row {
+    height: 60vh;
+  }
   .mainexhib img {
     filter: brightness(60%);
-  }
-}
-
-@media (min-width: 1200px) {
-  .maininst {
-    padding-left: 250px;
-    padding-right: 250px;
+    height: 440px;
+    object-fit: cover;
+    object-position: center;
   }
 }
 
 .ubicacion {
   background-color: #692121;
   color: #fff;
-}
-@media (min-width: 1200px) {
-  .ubicacion {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
 }
 .ubicacion .stu-titulo h2 {
   font-weight: bold;
@@ -386,12 +365,6 @@ body {
   font-weight: lighter;
 }
 
-@media (min-width: 1200px) {
-  .tarifas {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
-}
 .tarifas h2 {
   font-weight: bolder;
   color: #692121;
@@ -440,12 +413,6 @@ body {
 .opiniones {
   background-color: #090909;
 }
-@media (min-width: 1200px) {
-  .opiniones {
-    padding-left: 250px;
-    padding-right: 250px;
-  }
-}
 .opiniones h2 {
   font-weight: bold;
   color: #fff;
@@ -464,6 +431,11 @@ body {
   margin-bottom: 42px;
   padding: 32px;
 }
+@media (min-width: 1200px) {
+  .opiniones .opiniones_card {
+    width: 360px;
+  }
+}
 .opiniones .opiniones_card p {
   text-align: justify;
 }
@@ -476,12 +448,6 @@ body {
 .opiniones .opiniones_card h3 {
   font-weight: bold;
   text-align: center;
-}
-@media (min-width: 1200px) {
-  .opiniones .opiniones_card {
-    width: 20vw;
-    height: 350px;
-  }
 }
 
 .foto {
@@ -518,6 +484,9 @@ footer {
   color: #fff;
   text-align: center;
 }
+footer h5 {
+  font-size: 1.5rem;
+}
 footer .blinks {
   background-color: #111111;
   padding: 32px 0px;
@@ -543,13 +512,12 @@ footer a {
     color: #c79665;
     background-color: #2a2828;
     border-radius: 15px;
-    padding: 16px;
     transition: 0.5s;
   }
 }
 footer i {
   font-size: 1.6rem;
-  margin: 24px;
+  margin: 12px;
 }
 footer p {
   font-weight: lighter;
@@ -558,26 +526,18 @@ footer p {
 footer article {
   padding: 16px 0px;
 }
-footer .lfcontacto {
-  background-color: #692121;
-  border-radius: 15px;
-  width: 60vw;
-  padding: 10px;
-  margin-top: 24px;
-}
+
 @media (min-width: 1200px) {
-  footer .lfcontacto {
-    width: auto;
-    height: 60px;
-    padding: 16px;
-    margin-top: 0px;
+  .iconos a:hover {
+    background-color: transparent;
+    transition: 0.5s;
   }
 }
 
 .forma {
-  background-image: url("../img-museo/vista-muro-chan-chan.jpg");
-  background-color: #090909;
-  background-blend-mode: overlay;
+  background-image: url("../../img-museo/vista-muro-chan-chan-opt.jpg");
+  background-color: rgb(20, 20, 20);
+  background-blend-mode: multiply;
   background-size: cover;
   color: #fff;
   font-weight: lighter;
@@ -598,12 +558,22 @@ header {
 header li a {
   margin: 16px;
 }
-header .active {
-  font-weight: bold;
+header li a h1 {
+  font-size: 16px;
+  font-weight: bolder;
+  margin: 16px;
 }
-header .contacto {
-  background-color: rgb(115, 34, 34);
-  border-radius: 5px;
+header .contacto .btn-primary {
+  background-color: #692121;
+  color: #fff !important;
+  border: none;
+}
+@media (min-width: 1200px) {
+  header .contacto .btn-primary:hover {
+    background-color: #c79665;
+    font-weight: bolder;
+    color: #692121 !important;
+  }
 }
 @media (min-width: 1200px) {
   header {
@@ -618,8 +588,9 @@ header .contacto {
     border-radius: 5px;
     transition: 0.2s;
   }
-  header .contacto:hover {
+  header .contacto button:hover {
     background-color: #c79665;
+    border-color: #fff;
   }
   header img {
     filter: invert(100%);
@@ -649,18 +620,13 @@ header .contacto {
 .shero .hero {
   display: flex;
 }
-@media (min-width: 1200px) {
-  .shero .htexto {
-    padding-bottom: 64px;
-  }
-}
-.shero .htexto h1 {
+.shero .htexto h6 {
   font-weight: bolder;
 }
 @media (min-width: 1200px) {
-  .shero .htexto h1 {
+  .shero .htexto h6 {
     font-size: 4rem;
-    padding-left: 250px;
+    padding-left: 30px;
   }
 }
 .shero .htexto p {
@@ -668,7 +634,7 @@ header .contacto {
 }
 @media (min-width: 1200px) {
   .shero .htexto p {
-    padding-left: 250px;
+    padding-left: 30px;
   }
 }
 
