--- a/SCSS/pages/_museo.scss
+++ b/SCSS/pages/_museo.scss
@@ -2,8 +2,8 @@
     height: auto;
     background-color: $blanco;
     @include large {
-      padding-left: 250px;
-      padding-right: 250px;
+      padding-left:30px;
+      padding-right:30px;
     }
     .contenido {
       h2 {
@@ -18,7 +18,7 @@
           background-color: $color-rojo;
         }
       }
-      h5 {
+      h3 {
         font-weight: bold;
         font-size: 1.5rem;
         text-align: center;
@@ -35,6 +35,9 @@
           margin-bottom: 60px;
         }
       }
+      .btn {
+        padding-left: 0px;
+      }
     }
   }
   
@@ -47,8 +50,8 @@
     background-attachment: fixed;
     color: $blanco;
     @include large {
-      padding-left: 250px;
-      padding-right: 200px;
+      padding-left: 30px;
+      padding-right: 20px;
     }
     .contenido {
       h2 {
@@ -67,21 +70,22 @@
       img {
         height: 400px;
         object-fit: cover;
+        @include large {
+          width: 400px;
+        }
       }
       .hbloque1__texto {
         text-align: justify;
-        h4 {
+        h3 {
           margin-bottom: 24px;
           @include large {
             line-height: 1.5;
-            padding: 0px 64px;
           }
         }
         p {
           font-weight: lighter;
           font-size: 1.1rem;
           @include large {
-            padding: 0px 64px;
             font-size: 1rem;
           }
         }
@@ -99,7 +103,7 @@
             width: 30vw;
           }
         }
-        h5 {
+        h3 {
           font-weight: bold;
           font-size: 1.3rem;
           line-height: 1.8;
@@ -117,17 +121,13 @@
   
       .shblock3 {
         text-align: justify;
-        h4 {
+        h3 {
           margin-bottom: 24px;
-          @include large {
-            margin-right: 60px;
-          }
         }
         p {
           font-weight: lighter;
           font-size: 1.1rem;
           @include large {
-            margin-right: 60px;
             font-size: 1rem;
           }
         }
@@ -138,10 +138,6 @@
   
   .maininfog {
     background-color: $gris-oscuro;
-    @include large {
-      padding-left: 250px;
-      padding-right: 250px;
-    }
     
     .contenido {
       .titulo {
@@ -158,7 +154,7 @@
         }
       }
     }
-    h5 {
+    h4 {
       font-weight: bold;
       font-size: 1.1rem;
       text-align: center;
@@ -173,15 +169,17 @@
     span {
       background-color: rgba(0, 0, 0, 0.464);
     }
+    img {
+      height: 787px;
+      object-fit: cover;
+      object-position: center;
+      filter: brightness(0.5);
+    }
   }
   
   
   .mainexhib {
     background-color: $color-rojo;
-    @include large {
-    padding-left: 250px;
-    padding-right: 250px;
-    }
     color: $blanco;
     .contenido {
       .titulo {
@@ -192,10 +190,13 @@
         hr {
           width: 30vw;
           border: 3px solid $blanco;
+          @include large {
+            width: 18vw;
+          }
         }
       }
     }
-    h5 {
+    h4 {
       font-weight: bold;
       font-size: 1.1rem;
       text-align: center;
@@ -214,17 +215,16 @@
       background-color: $negro-rojizo;
     }
     @include large {
+      .card {
+        .row {
+          height: 60vh;
+        }
+      }
       img {
         filter: brightness(60%);
+        height: 440px;
+        object-fit: cover;
+        object-position: center;
       }
     }
   }
-
-  .maininst {
-    @include large {
-      padding-left: 250px;
-      padding-right: 250px;
-    }
-    
-  }
-  
