--- a/SCSS/partials/_footer.scss
+++ b/SCSS/partials/_footer.scss
@@ -2,6 +2,9 @@ footer {
     background-color: $negro;
     color: $blanco;
     text-align: center;
+    h5 {
+      font-size: 1.5rem;
+    }
     .blinks {
       background-color: map-get($map: $escalas-gris , $key: 100);
       padding: 32px 0px;
@@ -22,14 +25,14 @@ footer {
           color: $melon;
           background-color: $gris-oscuro;
           border-radius: 15px;
-          padding: 16px;
           transition: 0.5s;
         }
       }
+    
     }
     i {
       font-size: 1.6rem;
-      margin: 24px;
+      margin: 12px;
     }
     p {
       font-weight: lighter;
@@ -38,18 +41,18 @@ footer {
     article {
       padding: 16px 0px;
     }
-    .lfcontacto {
-      background-color: $color-rojo;
-      border-radius: 15px;
-      width: 60vw;
-      padding: 10px;
-      margin-top: 24px;
+              
+    }
+
+    .iconos {
       @include large {
-        width: auto;
-        height: 60px;
-        padding: 16px;
-        margin-top: 0px;
+        a {
+          &:hover {
+            background-color: transparent;
+            transition: 0.5s;
+          }
+        }
       }
     }
-}
+
   
